--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -22,11 +22,12 @@
         <td><%= link_to 'Show', topic %></td>
         <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
         <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
+<%= link_to 'about me', new_topic_path %> 
 <%= link_to 'New Topic', new_topic_path %>
