--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -28,6 +28,5 @@
   </tbody>
 </table>
 
-<br>
-<%= link_to 'about me', new_topic_path %> 
 <%= link_to 'New Topic', new_topic_path %>
+<%= link_to 'About me', about_me_path %>
